[package]
name = "set2"
version = "0.1.0"
authors = ["amartinez <amartinez@atlassian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
openssl = "0.10.28"
rand = "0.7.3"
aes = "0.3.2"
block-modes = "0.3.3"